Bug 1235321 - Enable using line cursor to optimize reflowing absolute frames. r=bz

MozReview-Commit-ID: 4tVq5S4eTtS